Fix layout overflow when zooming

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -23,9 +23,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--content-bg-color);
 }
 
 .content {
@@ -34,7 +34,6 @@ body {
   justify-items: center;
   gap: 20px;
   width: 100%;
-  height: 100%;
   user-select: none;
   background-color: var(--content-bg-color);
 }
